<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Mixen</string>
    <string name="hello_world">Hello world!</string>
    <string name="exit_app_string">Quit</string>
    <string name="app_description">Mixen lets you create a playlist and share it with friends nearby.</string>
    <string name="app_description_long">Mixen lets you create a playlist and share it with friends nearby. \n Peak Digital. 2015. All Rights Reserved.</string>
    <string name="title_activity_mixen_stage">MixenStage</string>
    <string name="title_activity_more_info">MoreInfo</string>
    <string name="createDescript">First, enter a name to tell others who you are.</string>
    <string name="username_overwrite">This will overwrite your old username.</string>
    <string name="username_hint">Enter a username</string>
    <string name="username_protocol">Your username should contain no spaces or symbols, and be fairly short.</string>
    <string name="currently_playing">Currently Playing </string>
    <string name="now_playing_string">Now Playing</string>
    <string name="proposed_string">Suggested</string>
    <string name="title_activity_search_songs">SearchSongs</string>
    <string name="action_settings">Settings</string>
    <string name="add_song">Add a song</string>
    <string name="request_song">Request a song.</string>
    <string name="progressBarInfo">Checking for an internet connection...</string>
    <string name="no_internet_connection">Please double check your internet connection and try again later.</string>
    <string name="generic_network_error">We had a problem connecting to Spotify, please check your network connection and try again later.</string>
    <string name="frowny_face">:(</string>
    <string name="happy_face">:)</string>
    <string name="song_not_found">We couldn\'t find the song you were looking for. Sorry about that.</string>
    <string name="generic_streaming_error">An error occurred while trying to stream down your music. Sorry about that.</string>
    <string name="discover_p2p_error">Unfortunately, we couldn\'t find anybody nearby. Sorry about that.</string>
    <string name="title_activity_song_queue">SongQueue</string>
    <string name="empty_queue">The queue is empty! Add a song to get started.</string>
    <string name="title_activity_tabbed_song_queue">TabbedSongQueue</string>
    <string name="mixen_network_search">Searching for nearby Mixens...</string>
    <string name="revision_number">Revision 9.75 (Spotify)</string>
    <string name="build_type">Beta Build</string>
    <string name="title_activity_mixen_base">MixenBase</string>
    <string name="empty_users_queue">There are no users connected yet.</string>
    <string name="title_activity_album_view">AlbumView</string>
    <string name="permission_error">We had a problem streaming from Spotify. Another device may be using this Spotify account. Please logout on the other device and try again.</string>
    <string name="join_hint">Enter the code for the party you want to join.</string>
    <string name="blank_string"></string>
    <string name="title_activity_settings_screen">SettingsScreen</string>
    <string name="settings">Settings</string>

    <string name="welcome_tutorial_message">This is the song queue, from here, you can do a lot, but let\'s start by adding a song with the music button.</string>
    <string name="search_tutorial_message">To look for a song, enter it\'s name, recent searches will also show up here.</string>
    <string name="add_song_tutorial_message">When you\'ve found the song that you want, tap on the song add it to the queue, or tap the plus button to add the entire album.</string>
    <string name="live_tutorial_message">When you\'ve added all your favorite songs, you can go live by clicking the WiFi button. This lets others see your playlist and join in.</string>
    <string name="finale_tutorial_message">Welp, that\'s all, so go ahead and mix it up!</string>

    <string-array name="tutorial_titles">
    <item>@string/welcome_tutorial_message</item>
    <item>@color/Rebecca_Purple</item>
    <item>@color/Jacksons_Purple</item>
    <item>@color/Monza</item>
    <item>@color/Jelly_Bean</item>
    <item>@color/Madison</item>
    <item>@color/Niagara</item>
    <item>@color/Ocean_Green</item>
    <item>@color/San_Marino</item>
    <item>@color/Valencia</item>
    <item>@color/Sunset_Orange</item>
    <item>@color/Radical_Red</item>
    <item>@color/Picton_Blue</item>
    <item>@color/Lynch</item>
    </string-array>
    <string name="title_activity_tutorial_screen">TutorialScreen</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_music_view">MusicView</string>


</resources>
