<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainScreen"
    android:background="@color/Outer_Space"
    android:id="@+id/startScreenBase">

    <TextView
        android:text="@string/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/appNameTV"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:textSize="64dp"
        android:textColor="@color/Snow_White" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_description"
        android:id="@+id/moreInfoTV"
        android:textColor="@color/Snow_White"
        android:textSize="24dp"
        android:textIsSelectable="true"
        android:textAlignment="center"
        android:gravity="center"
        android:layout_below="@+id/appNameTV"
        android:layout_marginTop="65dp"
        android:layout_centerInParent="true" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/build_type"
        android:id="@+id/buildTypeTV"
        android:textColor="@color/Snow_White"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/buttonContainers"
        android:layout_alignParentEnd="false"
        android:layout_alignParentStart="false"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="90dp">

        <Button
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="Find"
            android:id="@+id/findMixen"
            android:textColor="@color/Tundora"
            android:textStyle="bold"
            android:visibility="visible"
            android:layout_alignParentStart="false"
            android:background="@drawable/rounded_button_layout"
            android:layout_toLeftOf="@+id/textDivider" />

        <Button
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="Create"
            android:id="@+id/createMixenButton"
            android:textColor="@color/Tundora"
            android:textStyle="bold"
            android:visibility="visible"
            android:layout_alignParentEnd="false"
            android:background="@drawable/rounded_button_layout"
            android:layout_toRightOf="@+id/textDivider" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="OR"
            android:id="@+id/textDivider"
            android:layout_centerHorizontal="true"
            android:textColor="@color/Snow_White"
            android:layout_alignParentEnd="false"
            android:textStyle="bold"
            android:textSize="14dp"
            android:background="@drawable/divider_button_layout"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_marginTop="5dp" />
    </RelativeLayout>

</RelativeLayout>
